# android-text-searching-app

./: README.md
TextSearchingApp/: gradle.properties  settings.gradle
TextSearchingApp/app/: build.gradle
TextSearchingApp/app/src/androidTest/java/com/sstepanenko/textsearchingapp/: ExampleInstrumentedTest.java
TextSearchingApp/app/src/main/: AndroidManifest.xml
TextSearchingApp/app/src/main/cpp/: CMakeLists.txt  jni_utils.cpp  jni_utils.h  log_reader.cpp  log_reader.h  log_reader_jni.cpp  native_log.h
TextSearchingApp/app/src/main/java/com/sstepanenko/textsearchingapp/app/: App.java
TextSearchingApp/app/src/main/java/com/sstepanenko/textsearchingapp/data/: DownloadedFile.java  TextSearchData.java
TextSearchingApp/app/src/main/java/com/sstepanenko/textsearchingapp/di/: ApplicationComponent.java  TextSearchModule.java
TextSearchingApp/app/src/main/java/com/sstepanenko/textsearchingapp/domain/: LogReader.java  TextSearchDataRepository.java  TextSearchDataRepositoryImpl.java  TextSearchInteractor.java  TextSearchInteractorImpl.java
TextSearchingApp/app/src/main/java/com/sstepanenko/textsearchingapp/errors/: FileDownloadException.java  TextSearchException.java
TextSearchingApp/app/src/main/java/com/sstepanenko/textsearchingapp/jni/: NativeDisposable.java  ObjectDisposedException.java
TextSearchingApp/app/src/main/res/layout/: fragment_text_search.xml
TextSearchingApp/app/src/main/res/values/: strings.xml
TextSearchingApp/app/src/test/java/com/sstepanenko/textsearchingapp/: ExampleUnitTest.java
(+9 files in other folders)
